# dividebatur2

./: .gitignore  .travis.yml  AUTHORS  Cargo.toml  README.md  TODO.md  aec_data  build.rs
src/: aec_candidates.rs  configuration.rs  defs.rs  engine.rs  lib.rs  main.rs  output.rs  senate2015.rs
src/aec/: candidates.rs  mod.rs
src/aec/data/: candidates.rs  formalpreferences.rs  mod.rs
