[package]
name = "dividebatur"
description = "Single Transferable Vote election result counter"
version = "0.3.1"
authors = ["Grahame Bowland <grahame@angrygoats.net>"]
homepage = "https://github.com/grahame/dividebatur2/"
license = "Apache-2.0"
exclude = [
  "dividebatur-aec//*"
]

[lib]
name = "dividebatur"
path = "src/lib.rs"

[[bin]]
name = "dividebatur"
path = "src/main.rs"

[badges]
travis-ci = { repository = "grahame/dividebatur2", branch = "master" }

[dependencies]
csv = "1.0.0-beta.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "2.2.0"
rayon = "1.0.0"
num = "0.1"
flate2 = "1.0"
